fix touch z-index bug

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ canvas#game {
     width: 100%;
     height: 100%;
     position: absolute;
+    z-index: 10;
 }
 
 #leftArea {
